# recipes-etl

./: .gitignore  AGENTS.md  CMD.sh  COMMANDS.sh  Dockerfile.worker  ELASTICSEARCH_QUERIES.md  FIX_HOMEBREW_PERMISSIONS.md  README.md  README_PYTHON.md  STROMBERG_PIPELINE_GUIDE.md  TESTING.md  activate.sh  docker-compose.python.yml  docker-compose.yml  env.example  install.py  load_to_db.py  process_and_load.py  pyproject.toml  recipes  requirements.txt  scripts.py  test_comprehensive_parsing.py  test_parser_improvements.py  test_setup.py
client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
db/: init-db.sql  schema.sql
docs/: COMMANDS.md  DATA_LOADING_FIXES.md  EGGPLANT_FIX.md  ELASTICSEARCH_GUIDE.md  EMBEDDINGS_GUIDE.md  INGREDIENT_FILTERING_ENHANCEMENT.md  INSTALL_EMBEDDINGS.md  KAFKA_DEDUPLICATION.md  KAFKA_GUIDE.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  PARSER_IMPROVEMENTS.md  PARSER_IMPROVEMENTS_KAFKA.md  PIPELINE_EXAMPLE.md  QUICK_START.md  README.md  README_PYTHON.md  RECIPE_RELOAD_GUIDE.md  REDDIT_SCRAPER_GUIDE.md  REFACTORING_PLAN.md  REINDEX_WITH_EMBEDDINGS.md  SCHEMA_IMPROVEMENTS.md  SEARCH_SYNC_SCHEDULE.md  SEMANTIC_SEARCH_CLIENT.md  SETUP_PYTHON312.md  SWITCH_TO_PYTHON312.md  TEMPORAL_GUIDE.md  TEMPORAL_SCHEDULES.md  TEST_ORGANIZATION.md  UUID_GENERATION_IMPROVEMENT.md  UUID_IMPLEMENTATION_SUMMARY.md  UUID_IN_JSON_EXPLAINED.md  UUID_SIMPLIFICATION.md  UUID_TRACKING.md  high-level-design.excalidraw  scraper_agent_design.md
scripts/: add_uuids_to_json.py  run_client.py  run_worker.py  setup-db.sh  setup.py  test-db.js  (+2 more)
(+91 files in other folders)
